--- a/package.json
+++ b/package.json
@@ -41,10 +41,12 @@
     ]
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.17",
     "autoprefixer": "^10.4.21",
     "gh-pages": "^6.3.0",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.17"
+    "tailwindcss": "^3.4.0"
+  },
+  "engines": {
+    "node": ">=14.0.0"
   }
 }
