--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-photo-album",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Pranav4555.github.io/My-photo-album",
+  "homepage": ".",
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
